// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render maximum 10 tags in the searchbox results 1`] = `
<Filter
  facet={
    {
      "ad": 1,
      "csharp": 1,
      "lang": 4,
      "sonar": 3,
    }
  }
  footer={
    <SearchableFilterFooter
      isLoading={false}
      onInputChange={[Function]}
      onOpen={[Function]}
      onQueryChange={[MockFunction]}
      options={
        [
          {
            "label": "dotnet",
            "value": "dotnet",
          },
          {
            "label": "it",
            "value": "it",
          },
          {
            "label": "net",
            "value": "net",
          },
          {
            "label": "aa",
            "value": "aa",
          },
          {
            "label": "ab",
            "value": "ab",
          },
          {
            "label": "ac",
            "value": "ac",
          },
          {
            "label": "ae",
            "value": "ae",
          },
          {
            "label": "af",
            "value": "af",
          },
          {
            "label": "ag",
            "value": "ag",
          },
          {
            "label": "ah",
            "value": "ah",
          },
        ]
      }
      property="tags"
      query={
        {
          "languages": [
            "java",
            "ad",
          ],
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.tags"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "lang",
      "sonar",
      "ad",
      "csharp",
    ]
  }
  property="tags"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
  value={
    [
      "java",
      "ad",
    ]
  }
/>
`;

exports[`should render the tags facet with the selected tags 1`] = `
<Filter
  facet={
    {
      "csharp": 1,
      "lang": 4,
      "sonar": 3,
    }
  }
  footer={
    <SearchableFilterFooter
      isLoading={false}
      onInputChange={[Function]}
      onOpen={[Function]}
      onQueryChange={[MockFunction]}
      options={[]}
      property="tags"
      query={
        {
          "tags": [
            "lang",
            "sonar",
          ],
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.tags"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "lang",
      "sonar",
      "csharp",
    ]
  }
  property="tags"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
  value={
    [
      "lang",
      "sonar",
    ]
  }
/>
`;

exports[`should render the tags facet with the selected tags 2`] = `
<div
  className="search-navigator-facet-box"
  data-key="tags"
>
  <FilterHeader
    name="projects.facets.tags"
  />
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      className="active"
      key="lang"
    >
      <button
        aria-checked={true}
        aria-label="projects.facets.label_text_x.projects.facets.tags.lang"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key="lang"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            optionKey="lang"
          />
        </span>
        <span
          className="facet-stat"
        >
          4
        </span>
      </button>
    </li>
    <li
      className="active"
      key="sonar"
    >
      <button
        aria-checked={true}
        aria-label="projects.facets.label_text_x.projects.facets.tags.sonar"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key="sonar"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            optionKey="sonar"
          />
        </span>
        <span
          className="facet-stat"
        >
          3
        </span>
      </button>
    </li>
    <li
      key="csharp"
    >
      <button
        aria-checked={false}
        aria-label="projects.facets.label_text_x.projects.facets.tags.csharp"
        className="facet search-navigator-facet projects-facet button-link"
        data-key="csharp"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            optionKey="csharp"
          />
        </span>
        <span
          className="facet-stat"
        >
          1
        </span>
      </button>
    </li>
  </ul>
  <SearchableFilterFooter
    isLoading={false}
    onInputChange={[Function]}
    onOpen={[Function]}
    onQueryChange={[MockFunction]}
    options={[]}
    property="tags"
    query={
      {
        "tags": [
          "lang",
          "sonar",
        ],
      }
    }
  />
</div>
`;

exports[`should render the tags without the ones in the facet 1`] = `
<Filter
  facet={
    {
      "csharp": 1,
      "lang": 4,
      "sonar": 3,
    }
  }
  footer={
    <SearchableFilterFooter
      isLoading={false}
      onInputChange={[Function]}
      onOpen={[Function]}
      onQueryChange={[MockFunction]}
      options={[]}
      property="tags"
      query={
        {
          "tags": null,
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.tags"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "lang",
      "sonar",
      "csharp",
    ]
  }
  property="tags"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
/>
`;

exports[`should render the tags without the ones in the facet 2`] = `
<Filter
  facet={
    {
      "csharp": 1,
      "lang": 4,
      "sonar": 3,
    }
  }
  footer={
    <SearchableFilterFooter
      isLoading={false}
      onInputChange={[Function]}
      onOpen={[Function]}
      onQueryChange={[MockFunction]}
      options={
        [
          {
            "label": "dotnet",
            "value": "dotnet",
          },
          {
            "label": "it",
            "value": "it",
          },
          {
            "label": "net",
            "value": "net",
          },
        ]
      }
      property="tags"
      query={
        {
          "tags": null,
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.tags"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "lang",
      "sonar",
      "csharp",
    ]
  }
  property="tags"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
/>
`;
